--- a/nifi/docker-compose.yml
+++ b/nifi/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: richardfelkl/nifi-plc4x:latest
     volumes:
       - ./container-data/nifi_lib/postgresql-42.2.18.jar:/opt/nifi/nifi-current/lib/postgresql-42.2.18.jar
+      - ./container-data/nifi_lib/clickhouse-jdbc-0.2.6-jar-with-dependencies.jar:/opt/nifi/nifi-current/lib/clickhouse-jdbc-0.2.6-jar-with-dependencies.jar
     #      - ./container-data/nifi_conf/archive:/opt/nifi/nifi-current/conf/archive
     #      - ./container-data/nifi_conf/flow.xml.gz:/opt/nifi/nifi-current/conf/flow.xml.gz
     #      - ./bootstrap.conf:/opt/nifi/nifi-current/conf/bootstrap.conf
